# vocosrt

./: .gitignore  DECISIONS.md  PLAN.md  README.md  REMOTE_TRAINING.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh
checkpoints/: manifest.json
checkpoints/finetune/: .training_complete  training.log.d15  training.log.d16  training_complete.d15.txt
demos/: demo_audio.py  demo_finetune_alt_checkpoints.py  demo_finetune_compare.py
scripts/: baseline_distortion.py  build_listen_kit.py  build_offline_vs_streaming_kit.py  click_forensics.py  download_checkpoints.py  download_corpora.py  finetune_causal.py  heartbeat.sh  rent_and_train.py  setup_remote.sh  train_remote.sh
tests/: conftest.py  test_00_forensic_log.py  test_01_bit_exactness.py  test_02_chunk_invariance.py  test_03_state_warmup.py  test_04_istft_cola.py  test_05_stability_long_run.py  test_06_distortion_metrics.py
vocos_rt/: __init__.py  causal_conv.py  distortion_metrics.py  forensic_log.py  offline_vocos.py  streaming_stft.py  streaming_vocos.py
